bio para spacing fix

--- a/src/styles/5-pages/team.scss
+++ b/src/styles/5-pages/team.scss
@@ -76,7 +76,7 @@ html {
   text-transform: uppercase;
   font-family: maisonNeue-Mono;
   grid-row: 3;
-  grid-column: 3/19;
+  grid-column: 8/16;
   line-height: 80%;
 }
 
@@ -85,7 +85,7 @@ h1 {
   font-family: Redaction;
   font-size: 3em;
   grid-row: 3;
-  grid-column: 7/16;
+  grid-column: 8/16;
 }
 
 
@@ -94,7 +94,7 @@ p.team {
   line-height: 200%;
   font-size: 0.7em;
   grid-row: 4/10;
-  grid-column: 9/15;
+  grid-column: 8/16;
 }
 
 p.small {
